Overflow fix

--- a/evolution-tree/src/App.scss
+++ b/evolution-tree/src/App.scss
@@ -27,20 +27,4 @@
     font-family: 'Roboto';
   }
 
-
-}
-
-.App-body {
-  background-color: #c1c8d6;
-  min-height: 100vh;
-  width: 100vw;
-  overflow: visible;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  pointer-events: all;
-  background-image: url('./assets/leafborder.png');
-  background-repeat: no-repeat;
-  background-size: cover;
 }
