--- a/evolution-tree/src/screens/Home.scss
+++ b/evolution-tree/src/screens/Home.scss
@@ -1,6 +1,20 @@
 
+.home-body {
+  background-color: #c1c8d6;
+  min-height: 100vh;
+  overflow: hidden;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  pointer-events: all;
+  background-image: url('../assets/leafborder.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .button {
-  overflow-x: hidden;
   background-color: #637675;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4);
   border: solid;
